--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
     <title>Racing Club Chivilcoy</title>
     <link rel="shortcut icon" href="./media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css" />
     <link
       rel="stylesheet"
@@ -91,19 +82,19 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">18/08 - 21:00</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoFyH">18/08 - 21:00</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M162-520h114q-6-38-23-71t-43-59q-18 29-30.5 61.5T162-520Zm522 0h114q-5-36-17.5-68.5T750-650q-26 26-43 59t-23 71ZM210-310q26-26 43-59t23-71H162q5 36 17.5 68.5T210-310Zm540 0q18-29 30.5-61.5T798-440H684q6 38 23 71t43 59ZM358-520h82v-278q-53 8-98.5 29.5T260-712q39 38 64.5 86.5T358-520Zm162 0h82q8-57 33.5-105.5T700-712q-36-35-81.5-56.5T520-798v278Zm-80 358v-278h-82q-8 57-33.5 105.5T260-248q36 35 81.5 56.5T440-162Zm80 0q53-8 98.5-29.5T700-248q-39-38-64.5-86.5T602-440h-82v278Zm-40-318Zm0 400q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">Villa Mitre</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoRival">Villa Mitre</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M480-301q99-80 149.5-154T680-594q0-90-56-148t-144-58q-88 0-144 58t-56 148q0 65 50.5 139T480-301Zm0 101Q339-304 269.5-402T200-594q0-125 78-205.5T480-880q124 0 202 80.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520ZM200-80v-80h560v80H200Zm280-520Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">Estadio Norte</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoUbi">Estadio Norte</h7>
               </div>
             </div>
           </div>
@@ -243,27 +234,33 @@
       <section class="section3">
         <!-- Sponsors-->
         <article class="article31 d-flex align-items-center">
-          <div class="owl-carousel container-fluid">
+          <div class="owl-carousel container-fluid d-flex align-items-center">
             <div class="item">
-              <img src="./media/sponsor1.jpg" alt="" />
+              <img src="./media/sponsors/Grilon3_page-0001 (1).jpg" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor2.jpg" alt="" />
+              <img src="./media/sponsors/grilon_corto (1)_page-0001 (1).jpg" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor1.jpg" alt="" />
+              <img src="./media/sponsors/grilon_multi (1) (1).png" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor2.jpg" alt="" />
+              <img src="./media/sponsors/Logo NTH (1).png" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor1.jpg" alt="" />
+              <img src="./media/sponsors/logo_grilon_pez (2) (1).png" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor2.jpg" alt="" />
+              <img src="./media/sponsors/logo_starlight_page-0002 (1).jpg" alt="" />
             </div>
             <div class="item">
-              <img src="./media/sponsor1.jpg" alt="" />
+              <img src="./media/sponsors/macronita-logotipo_page-0001 (1).jpg" alt="" />
+            </div>
+            <div class="item">
+              <img src="./media/sponsors/nitanyl (2) (1).png" alt="" />
+            </div>
+            <div class="item">
+              <img src="./media/sponsors/prestito fondo blanco (1).png" alt="" />
             </div>
           </div>
         </article>
@@ -394,7 +391,7 @@
         <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
-            <div class="col-12 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
+            <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
               <img src="./media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
@@ -447,16 +444,18 @@
           </article>
         </section>
     </footer>
+    <div id="matchesContainer"></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="./js/js.js"></script>
   </body>
 </html>
