--- a/pages/asociate.html
+++ b/pages/asociate.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racing Club Chivilcoy - Asociate</title>
     <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css" />
     <link rel="stylesheet" href="../css/formulario.css">
     <link
@@ -44,15 +35,15 @@
               <a class="nav-link fs-4" href="./estadios.html">Estadios</a>
               <a class="nav-link fs-4" href="./plantel.html">Plantel</a>
               <a class="nav-link fs-4" href="./productos.html">Productos</a>
-              <a class="nav-link fs-4 active" id="asociate" href="./asociate.html">Asociate</a>
+              <a class="nav-link fs-4 active" href="./asociate.html">Asociate</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
-    <main class="mainFormulario">
+    <main class="mainFormulario" id="mainFormulario">
         <section class="container-fluid d-flex flex-column align-items-center">
-            <h2 class="mt-3">Asociate</h2>
+            <h2 class="mt-3 mb-3">Asociate</h2>
             <form id="contactForm" class="col-11 col-sm-8 col-md-6 col-lg-4 col-xl-3">
                 <label for="nombre" class="form-label mt-1">Nombre</label>
                 <input type="text" id="nombre" name="name" class="form-control" required />
@@ -73,7 +64,7 @@
             <div id="status"></div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
       <!-- FooterLarge -->
       <section id="footerLarge" class="d-none">
         <article class="container-fluid d-flex flex-row align-items-center p-0">
@@ -137,7 +128,7 @@
         <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
-            <div class="col-12 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
+            <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
               <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
@@ -170,7 +161,7 @@
               </div>
               <!-- Liga Chivilcoyana -->
               <div class="col p-0 my-2 d-flex justify-content-center">
-                <a href="https://www.instagram.com/basquetchivilcoy/" target="blank">
+                <a href="https://www.instagram.com/basquetchivilcoy/" target="blank" rel="noopener noreferrer">
                   <img src="../media/img17_preview_rev_1.png" alt="" class="logosLigas"/>
                 </a>
               </div>
@@ -190,15 +181,7 @@
           </article>
         </section>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../js/formulario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
@@ -210,5 +193,6 @@
         });
       })();
     </script>
+    <script src="../js/formulario.js"></script>
   </body>
 </html>
