--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racing Club Chivilcoy - Noticias</title>
     <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css" />
     <link
       rel="stylesheet"
@@ -51,23 +42,16 @@
       </nav>
     </header>
     <main class="container-fluid d-flex flex-column align-items-center mt-2">
-        <h1>Noticias</h1>
-        <div class="container-fluid flex-row align-items-start">
-          <div class="btn-group dropend">
-            <button class="btn btn-custom dropdown-toggle botonVerMas" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Filtrar
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <li><button class="dropdown-item" onclick="filtrarNoticias('todas')">Todas</button></li>
-              <li><button class="dropdown-item" onclick="filtrarNoticias('categoriau20')">U-20</button></li>
-              <li><button class="dropdown-item" onclick="filtrarNoticias('categoriau23')">U-23</button></li>
-              <li><button class="dropdown-item" onclick="filtrarNoticias('categoriaP')">Primera</button></li>
-            </ul>
-          </div>
-        </div>
-        <section class="container-fluid row align-items-center p-0 contenedorNoticias">
+      <h1 class="mt-3 mb-3">Noticias</h1>
+      <div class="container-fluid d-flex justify-content-evenly mt-3 mb-3">
+        <button class="btn btn-sm btn-custom botonVerMas" onclick="filtrarNoticias('todas')">Todas</button>
+        <button class="btn btn-sm btn-custom botonVerMas" onclick="filtrarNoticias('categoriau20')">U-20</button>
+        <button class="btn btn-sm btn-custom botonVerMas" onclick="filtrarNoticias('categoriau23')">U-23</button>
+        <button class="btn btn-sm btn-custom botonVerMas" onclick="filtrarNoticias('categoriaP')">Primera</button>
+      </div>
+      <section class="container-fluid row align-items-center p-0 contenedorNoticias">
         <!-- Noticia 1 -->
-          <div class=" todas noticiaItem categoriau20 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriau20 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">U-20</h2>
@@ -103,9 +87,9 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
         <!-- Noticia 2 -->
-          <div class=" todas noticiaItem categoriau20 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriau20 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">U-20</h2>
@@ -134,9 +118,9 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
         <!-- Noticia 3 -->
-          <div class=" todas noticiaItem categoriau23 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriau23 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">U-23</h2>
@@ -165,9 +149,9 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
         <!-- Noticia 4 -->
-          <div class=" todas noticiaItem categoriau23 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriau23 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">U-23</h2>
@@ -196,9 +180,9 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
         <!-- Noticia 5 -->
-          <div class=" todas noticiaItem categoriaP col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriaP col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">Primera</h2>
@@ -227,9 +211,9 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
         <!-- Noticia 6 -->
-          <div class=" todas noticiaItem categoriaP col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
+        <div class=" todas noticiaItem categoriaP col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
             <div class="noticias d-flex flex-column align-items-center text-center">
               <img src="../media/img12.jpg" alt="" />
               <h2 class="mt-3 mb-3">Primera</h2>
@@ -258,8 +242,8 @@
                 </div>
               </div>
             </div>
-          </div>
-        </section>
+        </div>
+      </section>
     </main>
     <footer>
       <!-- FooterLarge -->
@@ -325,7 +309,7 @@
         <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
-            <div class="col-12 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
+            <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
               <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
@@ -379,23 +363,6 @@
         </section>
     </footer>
     <script src="../js/noticias.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
-    ></script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init({
-          publicKey: "WyWd-bVduiW2PhE6s",
-        });
-      })();
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
