--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,16 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racing Club Chivilcoy - Productos</title>
     <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/productos.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"
@@ -23,8 +16,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     />
-    <link rel="stylesheet" href="../css/estilos.css" />
-    <link rel="stylesheet" href="../css/productos.css">
   </head>
   <body id="body">
     <header class="container-fluid header" id="header">
@@ -50,7 +41,10 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid">
+    <main class="mainProductos container-fluid">
+      <div class="container-fluid d-flex justify-content-center mb-3 mt-3">
+        <h1>Productos</h1>
+      </div>
         <section class="row align-items-center justify-content-evenly">
           <!-- Producto 1 -->
             <div class="col-xl-2 col-lg-4 col-md-5 col-5 my-1 producto">
@@ -454,7 +448,7 @@
         <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
-            <div class="col-12 pt-4 pb-4 d-flex justify-content-center divEscudoRacing">
+            <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
               <img src="../media/img15-khvwTVqnO-transformed_preview_rev_1.png" alt="" class="escudoRacing"/>
             </div>
             <!-- Redes + Ligas -->
@@ -507,9 +501,7 @@
           </article>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/productos.js"></script>
     </script>
   </body>
